--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,16 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>11</java.version>
+        <java.version>17</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <junit.platform.surefire.provider.version>1.1.0</junit.platform.surefire.provider.version>
         <junit.jupiter.version>5.7.0</junit.jupiter.version>
         <junit.maven.surefire.plugin.version>2.22.1</junit.maven.surefire.plugin.version>
-        <jacoco.version>0.8.3</jacoco.version>
+        <jacoco.version>0.8.7</jacoco.version>
+        <sonar.coverage.jacoco.xmlReportPaths>
+          ../app-it/target/site/jacoco-aggregate/jacoco.xml
+        </sonar.coverage.jacoco.xmlReportPaths>
     </properties>
     <build>
         <plugins>
