--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -42,11 +42,10 @@ jobs:
 
       - name: Build and analyze with code coverage
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_PROJECT_KEY: your_project_key  # Replace with your SonarCloud project key
+          # ...
+          SONAR_PROJECT_KEY: your_project_key
         run: |
           cd gang-of-four  # Update path if needed
           mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
             -Dsonar.coverage.jacoco.xmlReportPaths=target/jacoco.xml  # Update path if needed
- || echo "SonarCloud analysis failed!" && steps.fail(message: 'SonarCloud analysis failed')
+             || echo "SonarCloud analysis failed!" && steps.fail(message: 'SonarCloud analysis failed')
